[package]
name = "minecrate"
version = "0.1.0"
authors = ["Jérémy Levilain <jeremy.levilain@epitech.eu>"]
edition = "2018"

[workspace]
members = [
    ".",
    "common",
    "network"
]

[dependencies]
minecrate-common = { path = "./common" }
minecrate-network = { path = "./network" }
specs = "0.15.1"
log = "0.4.8"
env_logger = "0.7.1"
