[package]
name = "minecrate"
version = "0.1.0"
authors = ["Jérémy Levilain <jeremy.levilain@epitech.eu>"]
edition = "2018"

[workspace]
members = [
    ".",
    "common",
    "network",
    "entity",
    "world"
]

[dependencies]
minecrate-common = { path = "./common" }
minecrate-network = { path = "./network" }
minecrate-entity = { path = "./entity" }
minecrate-world = { path = "./world" }
log = "0.4.8"
env_logger = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.6"
ctrlc = "3.1.3"